# fury

./: .asf.yaml  .bazelrc  .gitattributes  .gitignore  AGENTS.md  BUILD  CONTRIBUTING.md  LICENSE  MODULE.bazel  NOTICE  README.md  WORKSPACE  licenserc.toml
.github/: pull_request_template.md  sync.yml
bazel/: cython.BUILD  cython_library.bzl  fory_deps_setup.bzl
benchmarks/cpp_benchmark/: CMakeLists.txt  README.md  benchmark.cc  benchmark_report.py  profile.sh  run.sh
benchmarks/rust_benchmark/: Cargo.toml  README.md  benchmark_report.py
benchmarks/rust_benchmark/benches/: buffer_read_bench.rs  serialization_bench.rs  threaded_bench.rs
benchmarks/rust_benchmark/proto/: complex.proto  medium.proto  realworld.proto  simple.proto
benchmarks/rust_benchmark/src/models/: complex.rs  medium.rs  mod.rs
benchmarks/rust_benchmark/src/serializers/: json.rs
ci/: build_linux_wheels.py  build_manylinux_wheel.sh  deploy.sh  format.sh  generate_release_note.py  release.py  run_ci.py  run_ci.sh
compiler/: README.md  pyproject.toml
compiler/examples/: common.fdl  demo.fdl  user.fdl
compiler/extension/: fory_options.proto
compiler/fory_compiler/: __init__.py  __main__.py  cli.py
compiler/fory_compiler/frontend/: __init__.py  base.py  utils.py
compiler/fory_compiler/frontend/fbs/: __init__.py  ast.py  lexer.py  parser.py  translator.py
compiler/fory_compiler/frontend/fdl/: __init__.py  lexer.py  parser.py
compiler/fory_compiler/frontend/proto/: __init__.py  ast.py  lexer.py  parser.py  translator.py
compiler/fory_compiler/generators/: __init__.py  base.py  cpp.py  go.py  java.py  python.py  rust.py
compiler/fory_compiler/ir/: __init__.py  ast.py  emitter.py  types.py  validator.py
compiler/fory_compiler/parser/: __init__.py  ast.py  lexer.py  parser.py
compiler/fory_compiler/tests/: __init__.py  test_fbs_frontend.py  test_fdl_emitter.py  test_generated_code.py  test_imports.py  test_message_defaults.py  test_nested_types.py  test_package_options.py  test_proto_frontend.py  test_weak_ref.py
cpp/: CMakeLists.txt  README.md
cpp/cmake/: ForyConfig.cmake.in
cpp/fory/: BUILD
cpp/fory/benchmark/: benchmark_string_util.cc
cpp/fory/columnar/: convert_test.cc
cpp/fory/encoder/: BUILD  CMakeLists.txt  row_encode_trait.h  row_encode_trait_test.cc  row_encoder.h  row_encoder_test.cc
cpp/fory/meta/: BUILD  CMakeLists.txt  enum_info.h  enum_info_test.cc  field.h  field_info.h  field_info_test.cc  field_test.cc  meta_string.cc  meta_string.h  meta_string_test.cc  preprocessor.h  type_index.h  type_traits.h
cpp/fory/python/: BUILD  pyfory.cc
cpp/fory/row/: BUILD  CMakeLists.txt  row.cc  row.h  row_test.cc  schema.cc  schema.h  type.cc  type.h  writer.cc  writer.h
cpp/fory/serialization/: BUILD  CMakeLists.txt  any_serializer.h  any_serializer_test.cc  array_serializer.h  basic_serializer.h  collection_serializer.h  collection_serializer_test.cc  config.h  context.cc  context.h  enum_serializer.h  field_serializer_test.cc  fory.h  map_serializer.h  map_serializer_test.cc  meta_string.cc  meta_string.h  meta_string_test.cc  namespace_macro_test.cc  ref_mode.h  ref_resolver.h  serialization_test.cc  serializer.h  serializer_traits.h  skip.cc  skip.h  smart_ptr_serializer_test.cc  smart_ptr_serializers.h  string_serializer.h  struct_compatible_test.cc  struct_serializer.h  struct_test.cc  temporal_serializers.h  tuple_serializer.h  tuple_serializer_test.cc  type_info.h  type_resolver.cc  type_resolver.h  union_serializer.h  (+7 more)
cpp/fory/type/: BUILD  CMakeLists.txt  type.h
cpp/fory/util/: BUILD  CMakeLists.txt  bit_util.h  buffer.cc  buffer.h  buffer_test.cc  error.cc  error.h  error_test.cc  flat_int_map.h  flat_int_map_test.cc  lock.h  logging.cc  logging.h  logging_test.cc  macros.h  pool.h  pool_test.cc  result.h  result_test.cc  string_util.cc  string_util.h  string_util_test.cc  time_util.cc  time_util.h  time_util_test.cc
dart/: README.md
docs/: README.md  cpp_debug.md
examples/cpp/cmake_example/: CMakeLists.txt  README.md  row_format_example.cc  run.sh  serialization_example.cc
go/: README.md
integration_tests/: README.md
integration_tests/idl_tests/cpp/: CMakeLists.txt  main.cc  run.sh
java/: README.md  pom.xml
javascript/: .eslintrc.cjs  .gitignore  README.md  jest.config.js  (+1 more)
python/: CONTRIBUTING.md  README.md  pyproject.toml  setup.py
python/pyfory/: __init__.py  _fory.py  _registry.py  _serialization.pyx  _serializer.py  _struct.py  _util.pxd  _util.pyx  buffer.pxd  buffer.pyx  codegen.py  collection.pxi  collection.py  error.py  field.py  policy.py  primitive.pxi  registry.py  resolver.py  serialization.pyx  serializer.py  struct.py  type.py  type_util.py  types.py  union.py  utils.py
python/pyfory/format/: __init__.py  _format.pyx  columnar.py  encoder.pxi  encoder.py  infer.py  row.pxi  schema.pxi  schema.py  serializer.py
python/pyfory/format/tests/: test_encoder.py  test_infer.py  test_vectorized.py
python/pyfory/includes/: libformat.pxd  libserialization.pxd  libutil.pxd
python/pyfory/meta/: meta_compressor.py  metastring.py  test_meta_compressor.py  typedef.py  typedef_decoder.py  typedef_encoder.py
python/pyfory/tests/: benchmark.py  core.py  record.py  test_array.py  test_buffer.py  test_class_serializer.py  test_codegen.py  test_collection.py  test_cross_language.py  test_field_meta.py  test_function.py  test_meta_share.py  test_metastring.py  test_metastring_resolver.py  test_method.py  test_pickle_buffer.py  test_policy.py  test_reduce_serializer.py  test_serializer.py  test_stateful_reproduction.py  test_stateful_serializer.py  test_struct.py  test_thread_safe.py  test_typedef_encoding.py  test_union.py  xlang_test_main.py
rust/benches/: Cargo.toml  README.md  benchmark_report.py
rust/benches/benches/: buffer_write_bench.rs  serialization_bench.rs
rust/benches/proto/: medium.proto  realworld.proto  simple.proto
rust/benches/src/: lib.rs  main.rs
rust/benches/src/models/: complex.rs  medium.rs  realworld.rs  simple.rs
rust/benches/src/serializers/: fory.rs  fury.rs  json.rs  mod.rs  protobuf.rs
(+857 files in other folders)
