# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "fory-benchmarks"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fory_profiler"
path = "src/main.rs"

[[bench]]
name = "serialization_bench"
path = "benches/serialization_bench.rs"
harness = false

[[bench]]
name = "buffer_write_bench"
path = "benches/buffer_write_bench.rs"
harness = false

[[bench]]
name = "buffer_read_bench"
path = "benches/buffer_read_bench.rs"
harness = false

[[bench]]
name = "threaded_bench"
path = "benches/threaded_bench.rs"
harness = false

[dependencies]
fory = { path = "../../rust/fory" }
fory-core = { path = "../../rust/fory-core" }
fory-derive = { path = "../../rust/fory-derive" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
prost = "0.12"
prost-types = "0.12"
byteorder = "1.5"
rand = "0.8"
criterion = "0.5"
clap = { version = "4.0", features = ["derive"] }
pprof = { version = "=0.14.0", features = ["flamegraph", "criterion"], optional = true }

[features]
default = []
profiling = ["pprof"]

[build-dependencies]
prost-build = "0.12"
